--- a/MMS/MMS.ipynb
+++ b/MMS/MMS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This MMS case verifies the implementation of the Surface Kinetics boundary condition in FESTIM. We will consider a time-dependent case of hydrogen diffusion in a unit interval domain $\\Omega$ with a homogeneous diffusion coefficient $D$, and a Dirichlet boundary condition on the rear domain side."
+    "This MMS case verifies the implementation of the Surface Kinetics boundary condition in FESTIM. We will consider a time-dependent case of hydrogen diffusion on domain $\\Omega: x\\in[0,1] \\cup t\\in[0, 5]$ with a homogeneous diffusion coefficient $D$, and a Dirichlet boundary condition on the rear domain side."
    ]
   },
   {
@@ -129,7 +129,6 @@
     "        J_vs=n_surf * 2 / n_IS + 2 * lambda_IS - D,\n",
     "        surfaces=1,\n",
     "        initial_condition=exact_solution_cs(t=0),\n",
-    "        t = F.t\n",
     "    ),\n",
     "]\n",
     "\n",
