--- a/MMS/MMS.ipynb
+++ b/MMS/MMS.ipynb
@@ -36,7 +36,7 @@
     "& n_{\\mathrm{IS}} = 20 \\\\\n",
     "& n_{\\mathrm{surf}} = 5 \\\\\n",
     "& D = 5 \\\\\n",
-    "& \\lambda_{IS} = 2\n",
+    "& \\lambda_\\mathrm{IS} = 2\n",
     "\\end{align*}\n",
     "\n",
     "Injecting these parameters and the exact solution for solute H, we obtain:\n",
