added missing notebooks

--- a/D_damagedW/D_damagedW.ipynb
+++ b/D_damagedW/D_damagedW.ipynb
@@ -299,13 +299,13 @@
     "        dt_min=1e-6,\n",
     "        milestones=[\n",
     "            t_exposure,\n",
-    "            t_exposure+t_cool[i],\n",
-    "            t_exposure+t_cool[i]+t_storage,\n",
-    "            t_exposure+t_cool[i]+t_storage+t_add,\n",
-    "            t_exposure+t_cool[i]+t_storage+t_add+t_cool[1],\n",
-    "            t_exposure+t_cool[i]+2*t_storage+t_add+t_cool[1],\n",
-    "            t_exposure+t_cool[i]+2*t_storage+t_add+t_cool[1]+t_TDS,\n",
-    "        ]\n",
+    "            t_exposure + t_cool[i],\n",
+    "            t_exposure + t_cool[i] + t_storage,\n",
+    "            t_exposure + t_cool[i] + t_storage + t_add,\n",
+    "            t_exposure + t_cool[i] + t_storage + t_add + t_cool[1],\n",
+    "            t_exposure + t_cool[i] + 2 * t_storage + t_add + t_cool[1],\n",
+    "            t_exposure + t_cool[i] + 2 * t_storage + t_add + t_cool[1] + t_TDS,\n",
+    "        ],\n",
     "    )\n",
     "\n",
     "    W_model.settings = F.Settings(\n",
@@ -317,8 +317,8 @@
     "        + 2 * t_storage\n",
     "        + t_heat_add\n",
     "        + t_add\n",
-    "        + t_cool[1]+\n",
-    "        t_TDS\n",
+    "        + t_cool[1]\n",
+    "        + t_TDS,\n",
     "    )\n",
     "\n",
     "    # Exports\n",
@@ -364,14 +364,23 @@
     "            * f.exp(-2 * E_des(surf_conc2) / F.k_B / T)\n",
     "        )\n",
     "\n",
-    "    plt.plot(T_storage + ramp * (results[\"t(s)\"]-(t_exposure+t_cool[i]+2*t_storage+t_add+t_cool[1])),  \n",
-    "             results[\"Flux1\"],label = f'450 K', color = 'black')\n",
-    "    #plt.plot(results[\"t(s)\"],  results[\"Total retention volume 1\"],label = f'1')\n",
+    "    plt.plot(\n",
+    "        T_storage\n",
+    "        + ramp\n",
+    "        * (\n",
+    "            results[\"t(s)\"]\n",
+    "            - (t_exposure + t_cool[i] + 2 * t_storage + t_add + t_cool[1])\n",
+    "        ),\n",
+    "        results[\"Flux1\"],\n",
+    "        label=f\"450 K\",\n",
+    "        color=\"black\",\n",
+    "    )\n",
+    "    # plt.plot(results[\"t(s)\"],  results[\"Total retention volume 1\"],label = f'1')\n",
     "    # plt.plot(results[\"t(s)\"],  results[\"Total 2 volume 1\"],label = f'2')\n",
     "    # plt.plot(results[\"t(s)\"],  results[\"Total 3 volume 1\"],label = f'3')\n",
     "    # plt.plot(results[\"t(s)\"],  results[\"Total 4 volume 1\"],label = f'4')\n",
     "    plt.legend()\n",
-    "    plt.xlim(500,1200)\n",
+    "    plt.xlim(500, 1200)\n",
     "    plt.ylim(0, 2.25e17)\n",
     "    plt.ylabel(r\"Flux, m$^{-2}$s$^{-1}$\")\n",
     "    plt.xlabel(r\"T\")\n",
