--- a/MMS/MMS.ipynb
+++ b/MMS/MMS.ipynb
@@ -112,14 +112,22 @@
     "solute_source = 2 * (1 - 2 * D)\n",
     "\n",
     "exact_solution_cm = lambda x, t: 1 + 2 * x**2 + x + 2 * t\n",
-    "exact_solution_cs = lambda t: n_surf * (1 + 2 * t + 2 * lambda_IS - D) / (2 * n_IS - 1 - 2 * t)\n",
+    "exact_solution_cs = (\n",
+    "    lambda t: n_surf * (1 + 2 * t + 2 * lambda_IS - D) / (2 * n_IS - 1 - 2 * t)\n",
+    ")\n",
     "\n",
     "solute_source = 2 * (1 - 2 * D)\n",
     "\n",
     "my_model.sources = [F.Source(solute_source, volume=1, field=\"solute\")]\n",
     "\n",
+    "\n",
     "def J_vs(T, surf_conc, t):\n",
-    "    return 2 * n_surf * (2 * n_IS + 2 * lambda_IS - D) / (2 * n_IS - 1 - 2 * t)**2 + 2 * lambda_IS - D\n",
+    "    return (\n",
+    "        2 * n_surf * (2 * n_IS + 2 * lambda_IS - D) / (2 * n_IS - 1 - 2 * t) ** 2\n",
+    "        + 2 * lambda_IS\n",
+    "        - D\n",
+    "    )\n",
+    "\n",
     "\n",
     "my_model.boundary_conditions = [\n",
     "    F.DirichletBC(surfaces=[2], value=exact_solution_cm(x=F.x, t=F.t), field=\"solute\"),\n",
@@ -194,7 +202,8 @@
    ],
    "source": [
     "def norm(x, c_comp, c_ex):\n",
-    "    return np.sqrt(np.trapz(y=(c_comp-c_ex)**2, x=x))\n",
+    "    return np.sqrt(np.trapz(y=(c_comp - c_ex) ** 2, x=x))\n",
+    "\n",
     "\n",
     "data = np.genfromtxt(\"mobile_conc.txt\", names=True, delimiter=\",\")\n",
     "for t in export_times:\n",
@@ -216,7 +225,9 @@
     "        color=l1.get_color(),\n",
     "    )\n",
     "\n",
-    "    print(f\"L2 error for cm at t={t}: {norm(np.array(x), np.array(y), exact_solution_cm(x=np.array(x), t=t))}\")\n",
+    "    print(\n",
+    "        f\"L2 error for cm at t={t}: {norm(np.array(x), np.array(y), exact_solution_cm(x=np.array(x), t=t))}\"\n",
+    "    )\n",
     "\n",
     "plt.legend(reverse=True)\n",
     "plt.ylabel(\"$c_m$\")\n",
