H_Ti upd parameters

--- a/D_damagedW/D_damagedW.ipynb
+++ b/D_damagedW/D_damagedW.ipynb
@@ -89,13 +89,9 @@
     "\n",
     "    phi_exc = G_atom * sigma_exc * surf_conc\n",
     "\n",
-    "    phi_des = (\n",
-    "        2\n",
-    "        * nu0\n",
-    "        * (lambda_des * surf_conc) ** 2\n",
-    "        * f.exp(-2 * E_des / F.k_B / T)\n",
-    "    )\n",
+    "    phi_des = 2 * nu0 * (lambda_des * surf_conc) ** 2 * f.exp(-2 * E_des / F.k_B / T)\n",
     "    return phi_atom - phi_exc - phi_des\n",
+    "\n",
     "\n",
     "W_model = F.Simulation(log_level=40)\n",
     "\n",
@@ -114,11 +110,11 @@
     "tungsten = F.Material(id=1, D_0=D0, E_D=E_diff)\n",
     "W_model.materials = tungsten\n",
     "\n",
-    "'''distr = sp.Piecewise(\n",
+    "\"\"\"distr = sp.Piecewise(\n",
     "    (1, F.x <= 2.2e-6),\n",
     "    (1 - (F.x - 2.2e-6)/0.2e-6, F.x <= 2.4e-6),\n",
     "    (0, True)\n",
-    "    )'''\n",
+    "    )\"\"\"\n",
     "distr = 1 / (1 + sp.exp((F.x - 2.2e-6) / 2.5e-8))\n",
     "traps = F.Traps(\n",
     "    [\n",
@@ -143,7 +139,7 @@
     "            E_k=E_diff,\n",
     "            p_0=nu0,\n",
     "            E_p=1.65,\n",
-    "            density=0.19e-2*rho_W*distr,\n",
+    "            density=0.19e-2 * rho_W * distr,\n",
     "            materials=tungsten,\n",
     "        ),\n",
     "        F.Trap(\n",
@@ -151,7 +147,7 @@
     "            E_k=E_diff,\n",
     "            p_0=nu0,\n",
     "            E_p=1.85,\n",
-    "            density=0.16e-2*rho_W*distr,\n",
+    "            density=0.16e-2 * rho_W * distr,\n",
     "            materials=tungsten,\n",
     "        ),\n",
     "        F.Trap(\n",
@@ -159,7 +155,7 @@
     "            E_k=E_diff,\n",
     "            p_0=nu0,\n",
     "            E_p=2.06,\n",
-    "            density=0.02e-2*rho_W*distr,\n",
+    "            density=0.02e-2 * rho_W * distr,\n",
     "            materials=tungsten,\n",
     "        ),\n",
     "    ]\n",
@@ -187,7 +183,6 @@
     "    stepsize_change_ratio=1.2,\n",
     "    max_stepsize=1000,\n",
     "    dt_min=1e-6,\n",
-    "\n",
     ")\n",
     "\n",
     "W_model.settings = F.Settings(\n",
@@ -217,41 +212,50 @@
     "W_model.initialise()\n",
     "W_model.run()\n",
     "\n",
-    "retention = np.array(derived_quantities[0].data)+np.array(derived_quantities[1].data)\n",
+    "retention = np.array(derived_quantities[0].data) + np.array(derived_quantities[1].data)\n",
     "t = np.array(derived_quantities.t)\n",
     "\n",
-    "plt.plot(t/3600, retention, label = \"FESTIM\")\n",
+    "plt.plot(t / 3600, retention, label=\"FESTIM\")\n",
     "\n",
-    "plt.plot(t/3600, np.array(derived_quantities[4].data), label = \"Trap 3\")\n",
-    "plt.plot(t/3600, np.array(derived_quantities[5].data), label = \"Trap 4\")\n",
-    "plt.plot(t/3600, np.array(derived_quantities[6].data), label = \"Trap 5\")\n",
-    "plt.plot(t/3600, np.array(derived_quantities[1].data), label = \"Surf. conc.\")\n",
+    "plt.plot(t / 3600, np.array(derived_quantities[4].data), label=\"Trap 3\")\n",
+    "plt.plot(t / 3600, np.array(derived_quantities[5].data), label=\"Trap 4\")\n",
+    "plt.plot(t / 3600, np.array(derived_quantities[6].data), label=\"Trap 5\")\n",
+    "plt.plot(t / 3600, np.array(derived_quantities[1].data), label=\"Surf. conc.\")\n",
     "\n",
-    "#plt.plot(t/3600, np.array(derived_quantities[1].data))\n",
+    "# plt.plot(t/3600, np.array(derived_quantities[1].data))\n",
     "\n",
     "exp = pd.read_csv(\"./exp_data.csv\", header=None, skiprows=1, sep=\",\")\n",
     "\n",
-    "plt.scatter(exp[0], exp[1]*1e19, marker=\"^\", s=75, ec = \"black\", fc = \"none\", linewidths=1.2, label=\"exp.\")\n",
+    "plt.scatter(\n",
+    "    exp[0],\n",
+    "    exp[1] * 1e19,\n",
+    "    marker=\"^\",\n",
+    "    s=75,\n",
+    "    ec=\"black\",\n",
+    "    fc=\"none\",\n",
+    "    linewidths=1.2,\n",
+    "    label=\"exp.\",\n",
+    ")\n",
     "\n",
     "exp = pd.read_csv(\"./MHIMS.csv\", header=None, skiprows=1, sep=\",\")\n",
     "\n",
-    "plt.plot(exp[0]*2, exp[1]*1e19, color='black', ls='dashed', label=\"MHIMS\")\n",
+    "plt.plot(exp[0] * 2, exp[1] * 1e19, color=\"black\", ls=\"dashed\", label=\"MHIMS\")\n",
     "\n",
     "exp = pd.read_csv(\"./3.csv\", header=None, skiprows=1, sep=\",\")\n",
     "\n",
-    "plt.plot(exp[0], exp[1]*1e19, color='tab:green', ls='dashed', label=\"Trap 3\")\n",
+    "plt.plot(exp[0], exp[1] * 1e19, color=\"tab:green\", ls=\"dashed\", label=\"Trap 3\")\n",
     "\n",
     "exp = pd.read_csv(\"./4.csv\", header=None, skiprows=1, sep=\",\")\n",
     "\n",
-    "plt.plot(exp[0], exp[1]*1e19, color='tab:blue', ls='dashed', label=\"Trap 4\")\n",
+    "plt.plot(exp[0], exp[1] * 1e19, color=\"tab:blue\", ls=\"dashed\", label=\"Trap 4\")\n",
     "\n",
     "exp = pd.read_csv(\"./5.csv\", header=None, skiprows=1, sep=\",\")\n",
     "\n",
-    "plt.plot(exp[0], exp[1]*1e19, color='tab:red', ls='dashed', label=\"Trap 5\")\n",
+    "plt.plot(exp[0], exp[1] * 1e19, color=\"tab:red\", ls=\"dashed\", label=\"Trap 5\")\n",
     "\n",
     "exp = pd.read_csv(\"./cs.csv\", header=None, skiprows=1, sep=\",\")\n",
     "\n",
-    "plt.plot(exp[0], exp[1]*1e19, color='violet', ls='dashed', label=\"Surf. conc.\")\n",
+    "plt.plot(exp[0], exp[1] * 1e19, color=\"violet\", ls=\"dashed\", label=\"Surf. conc.\")\n",
     "\n",
     "plt.xlabel(r\"$t$, h\")\n",
     "plt.ylabel(r\"D amount, m$^{-2}$\")\n",
